Fix alignment and file name in resume link

--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -11,11 +11,17 @@
 
   section {
     color: #ffffff;
+    text-align: center;
+    width: 97%;
+    @include media($bp-md) {
+      width: 100%;
+    }
     h1 {
       @include font-secondary;
       font-size: 3rem;
       @include media($bp-lg) {
         font-size: 3.5rem;
+        text-align: left;
       }
       margin-bottom: 0.8rem;
       line-height: 1;
@@ -27,6 +33,7 @@
       @include font-primary;
       @include media($bp-lg) {
         font-size: 1.5rem;
+        text-align: left;
       }
       span {
         color: rgba(255, 255, 255, 0.80);
